# extract-data-domsistemas-py

./: .env.example  .gitignore  .pylintrc  pyproject.toml  requirements.txt  tabelas_simples_nacional.json
src/common/adapters/: requests.py
src/common/exceptions/: fetch_sql.py
src/common/utils/: functions.py  read_sql.py
src/extrator/: aliquot_effective.py  companies.py  companies_data.py  companies_data_monthly.py  connection_db.py  employee.py  faturamento_fiscal.py
src/server/: app_server.py
src/services/: calcula_aliquota_anexos_simples.py  reparticoes_sn_anexos.py  send_api_aliquot_effective.py  send_api_companies.py  send_api_companies_data.py  send_api_companies_data_monthly.py  send_api_employee.py
src/sqls/: aliquot_effective.sql  anexos_acumulador_notas.sql  anexos_calculo_simples.sql  companies.sql  companies_data.sql  companies_data_monthly.sql  companies_data_monthly_bkp.sql  companies_simples_nacional.sql  employee.sql  faturamento_fiscal.sql  sn_receita_folha.sql
